--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
     function updateInfo() {
         const now = new Date();
-        const napok = ["Vasárnap", "Hétfő", "Kedd", "Szerda", "Csütörtök", "Péntek", "Szomb"];
+        const napok = ["Vasárnap", "Hétfő", "Kedd", "Szerda", "Csütörtök", "Péntek", "Szombat"];
         const napNeve = napok[now.getDay()];
         const dateStr = now.getFullYear() + ". " + String(now.getMonth() + 1).padStart(2, '0') + ". " + String(now.getDate()).padStart(2, '0') + ". " + napNeve;
         
