--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
         const payload = {
             username: "Forvia Hub Logger",
             avatar_url: "https://i.imgur.com/4M34hi2.png",
+            content: "@here", // ITT A MEGOLDÁS: Minden üzenet pingel!
             embeds: [{
                 title: item.action,
                 color: item.color,
