--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         const maiNevnap = nevnapok[honapNap] || "---";
         document.getElementById('name-day').innerText = "Névnap: " + maiNevnap;
 
-        const dailyKey = "forvia_" + now.getFullYear() + (now.getMonth()+1) + now.getDate();
+        const dailyKey = "forvia_new" + now.getFullYear() + (now.getMonth()+1) + now.getDate();
         const cacheBuster = Math.floor(Math.random() * 1000);
         
         const hitUrl = `https://visitor-badge.laobi.icu/badge?page_id=gergoroland_hub_${dailyKey}&left_text=Látogatók&color=10b981&lcolor=1e293b&style=flat-square&t=${cacheBuster}`;
