--- a/8.html
+++ b/8.html
@@ -254,7 +254,7 @@
         <div class="flex justify-between items-center w-full">
             <div class="flex flex-col">
                 <span class="text-blue-500 font-black text-xl tracking-tighter leading-none">FORVIA</span>
-                <span class="text-[9px] text-slate-500 font-bold uppercase tracking-widest">Staff Pro 2026</span>
+                <span class="text-[9px] text-slate-500 font-bold uppercase tracking-widest">Szabadságok SMT 2026</span>
             </div>
             
             <div class="flex items-center bg-slate-900/80 p-1 rounded-lg border border-slate-700/50 shadow-sm">
