--- a/index.html
+++ b/index.html
@@ -439,6 +439,11 @@
     };
 
     const endPress = (e) => {
+        // ANDROID JAVÍTÁS: Megállítjuk az egér eseményeket, ha érintés volt
+        if (e.type === 'touchend') {
+            e.preventDefault();
+        }
+
         clearTimeout(pressTimer);
         fab.style.transform = "scale(1)";
         
