--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
             border: 1px solid rgba(255, 255, 255, 0.1);
             color: var(--text-dim); display: flex; align-items: center; justify-content: center;
             cursor: pointer; transition: all 0.3s ease; z-index: 10;
+            -webkit-tap-highlight-color: transparent; /* Mobilos villanás eltüntetése */
         }
-        .share-card-btn:hover {
+        .share-card-btn:active {
             background: var(--accent); color: white; border-color: var(--accent);
-            transform: scale(1.1); box-shadow: 0 0 15px rgba(59, 130, 246, 0.4);
+            transform: scale(0.95);
         }
 
         .share-icon-svg { width: 20px; height: 20px; fill: currentColor; }
@@ -149,11 +150,17 @@
         .nav-item {
             display: flex; align-items: center; padding: 14px 15px;
             margin-bottom: 8px; border-radius: 12px; text-decoration: none;
-            color: var(--text-dim); font-weight: 500; transition: 0.2s; cursor: pointer;
+            color: var(--text-dim); font-weight: 500; transition: background 0.1s; cursor: pointer;
+            -webkit-tap-highlight-color: transparent; /* Mobilon ne legyen szürke háttér érintéskor */
         }
         .nav-item i { width: 30px; font-style: normal; text-align: center; font-size: 1.2rem; }
-        /* Csak Hover és Active állapotban lesz kék, nem marad úgy */
-        .nav-item:hover, .nav-item:active { background: var(--accent); color: white; }
+        
+        /* JAVÍTOTT GOMB STÍLUS: Csak akkor kék, ha ÉPPEN nyomod (:active) */
+        /* A :hover-t meghagyjuk PC-re, de mobilon a :active dominál */
+        @media (hover: hover) {
+            .nav-item:hover { background: rgba(59, 130, 246, 0.2); color: white; }
+        }
+        .nav-item:active { background: var(--accent) !important; color: white !important; transform: scale(0.98); }
 
         .menu-fab {
             position: fixed; bottom: 30px; right: 30px;
@@ -208,7 +215,7 @@
 
 <div id="home-screen">
     <div class="glass-card">
-        <div class="share-card-btn" onclick="shareApp()" title="App megosztása">
+        <div class="share-card-btn" onclick="shareApp(this)" title="App megosztása">
             <svg class="share-icon-svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"/>
             </svg>
@@ -254,16 +261,16 @@
     </div>
 
     <nav class="nav-list">
-        <div onclick="showHome()" class="nav-item"><i>🏠</i> Kezdőlap</div>
-        <div onclick="loadModule('1.html')" class="nav-item"><i>🔍</i> Alkatrész Kereső</div>
-        <div onclick="loadModule('2.html')" class="nav-item"><i>💰</i> Bérkalkulátor</div>
-        <div onclick="loadModule('3.html')" class="nav-item"><i>📅</i> Műszaknaptár</div>
-        <div onclick="loadModule('4.html')" class="nav-item"><i>📝</i> Napi Jelentés segédlet</div>
-        <div onclick="loadModule('5.html')" class="nav-item"><i>🎭</i> Maszk kereső</div>
-        <div onclick="openSecureLink()" class="nav-item"><i>⚙️</i> Adatgeneráló 🔐</div>
-        <div onclick="loadModule('7.html')" class="nav-item"><i>📊</i> Hiba Analízis</div>
-        <div onclick="openStaffPro()" class="nav-item"><i>👥</i> Szabadságok 2026 🔐</div>
-        <div onclick="loadModule('9.html')" class="nav-item"><i>📷</i> Operátori Barcode Scan </div>
+        <div onclick="showHome(this)" class="nav-item"><i>🏠</i> Kezdőlap</div>
+        <div onclick="loadModule('1.html', false, this)" class="nav-item"><i>🔍</i> Alkatrész Kereső</div>
+        <div onclick="loadModule('2.html', false, this)" class="nav-item"><i>💰</i> Bérkalkulátor</div>
+        <div onclick="loadModule('3.html', false, this)" class="nav-item"><i>📅</i> Műszaknaptár</div>
+        <div onclick="loadModule('4.html', false, this)" class="nav-item"><i>📝</i> Napi Jelentés segédlet</div>
+        <div onclick="loadModule('5.html', false, this)" class="nav-item"><i>🎭</i> Maszk kereső</div>
+        <div onclick="openSecureLink(this)" class="nav-item"><i>⚙️</i> Adatgeneráló 🔐</div>
+        <div onclick="loadModule('7.html', false, this)" class="nav-item"><i>📊</i> Hiba Analízis</div>
+        <div onclick="openStaffPro(this)" class="nav-item"><i>👥</i> Szabadságok 2026 🔐</div>
+        <div onclick="loadModule('9.html', false, this)" class="nav-item"><i>📷</i> Operátori Barcode Scan </div>
     </nav>
 
     <footer>Szoftverfejlesztő:<br><strong style="color:white">GERGŐ ROLAND</strong><br>2026</footer>
@@ -372,7 +379,7 @@
                     { name: "⏰ Időpont", value: timeString, inline: true },
                     { name: "🛠️ Eszköz", value: platform, inline: true }
                 ],
-                footer: { text: "Master Shell v2.8 (Clean Menu)" }
+                footer: { text: "Master Shell v2.9 (No Sticky Hover)" }
             }]
         };
 
@@ -389,8 +396,12 @@
         });
     }
 
-    // --- NAVIGÁCIÓ (Egyszerűsített, nincs highlight) ---
-    function loadModule(url, autoStart = false) {
+    // --- NAVIGÁCIÓ (Kényszerített fókusz elvétel - BLUR) ---
+    // A 'caller' paraméter maga a gomb, amire kattintottál
+    function loadModule(url, autoStart = false, caller = null) {
+        // Ha van gomb, azonnal elvesszük tőle a fókuszt (hogy ne maradjon kék)
+        if(caller) caller.blur();
+
         document.getElementById('home-screen').style.display = 'none';
         document.getElementById('content-frame').style.display = 'block';
         
@@ -410,7 +421,9 @@
         sendDiscordLog(`📂 Modul Megnyitva: ${readableName} ${autoStart ? '(Gyorsgomb)' : ''}`, 3066993);
     }
 
-    function showHome() {
+    function showHome(caller = null) {
+        if(caller) caller.blur(); // Blur itt is
+
         document.getElementById('home-screen').style.display = 'flex';
         document.getElementById('content-frame').style.display = 'none';
         document.getElementById('content-frame').src = ""; 
@@ -465,7 +478,8 @@
     fab.addEventListener('mouseleave', () => clearTimeout(pressTimer)); 
 
     // --- EGYÉB FUNKCIÓK ---
-    function openSecureLink() {
+    function openSecureLink(caller) {
+        if(caller) caller.blur();
         let pin = prompt("Adatgeneráló - Biztonsági kód:");
         if (pin === "smtforvia2026") {
             window.open("https://gergoroland33-sys.github.io/adatgeneralo/", "_blank");
@@ -476,7 +490,8 @@
         }
     }
 
-    function openStaffPro() {
+    function openStaffPro(caller) {
+        if(caller) caller.blur();
         let pin = prompt("Staff Pro 2026 - Biztonsági kód:");
         if (pin === "smtforvia2026") {
             loadModule('8.html');
@@ -486,7 +501,8 @@
         }
     }
 
-    async function shareApp() {
+    async function shareApp(caller) {
+        if(caller) caller.blur();
         // DISCORD LOG A MEGOSZTÁSHOZ
         sendDiscordLog("📤 App Megosztás gomb lenyomva", 3066993);
 
