--- a/index.html
+++ b/index.html
@@ -345,20 +345,22 @@
     let discordQueue = [];
     let isSending = false;
     
-    // 1. TARTÓS ESZKÖZ AZONOSÍTÓ (Persistent Device ID) + BELÉPÉS SZÁMLÁLÓ
+    // 1. TARTÓS ESZKÖZ AZONOSÍTÓ & AKTIVITÁS SZÁMLÁLÓ
     let deviceID = localStorage.getItem('fv_device_id');
-    let sessionCount = localStorage.getItem('fv_session_count'); // ÚJ: Számláló lekérése
+    // Itt tároljuk a teljes aktivitást (kattintások száma)
+    let totalActivity = localStorage.getItem('fv_total_activity');
 
-    // Ha nincs ID, generálunk (a te eredeti módszereddel)
+    // Ha nincs ID, generálunk
     if (!deviceID) {
         deviceID = Math.floor(Math.random() * 0x10000).toString(16).toUpperCase();
         localStorage.setItem('fv_device_id', deviceID);
     }
     
-    // ÚJ: Számláló növelése minden frissítésnél
-    if (!sessionCount) sessionCount = 0;
-    sessionCount = parseInt(sessionCount) + 1;
-    localStorage.setItem('fv_session_count', sessionCount);
+    // Ha még nincs aktivitás számláló, legyen 0
+    if (!totalActivity) {
+        totalActivity = 0;
+        localStorage.setItem('fv_total_activity', totalActivity);
+    }
 
     function sendDiscordLog(actionName, colorCode = 3883766) {
         discordQueue.push({ action: actionName, color: colorCode, time: new Date() });
@@ -392,8 +394,8 @@
                 color: item.color,
                 fields: [
                     { name: "⏰ Időpont", value: timeString, inline: true },
-                    // 2. A TARTÓS ID BEILLESZTÉSE (Ez már nem változik frissítéskor) + BELÉPÉSSZÁM
-                    { name: "🛠️ Eszköz & ID", value: `${platform} | ID: #${deviceID} | Belépés: ${sessionCount}.`, inline: true }
+                    // JAVÍTVA: Itt mindig a legfrissebb totalActivity-t mutatja
+                    { name: "🛠️ Eszköz & ID", value: `${platform} | ID: #${deviceID} | Aktivitás: ${totalActivity}.`, inline: true }
                 ],
                 footer: { text: "Master Shell v2.9 (No Sticky Hover)" }
             }]
@@ -417,6 +419,10 @@
     function loadModule(url, autoStart = false, caller = null) {
         // Ha van gomb, azonnal elvesszük tőle a fókuszt (hogy ne maradjon kék)
         if(caller) caller.blur();
+
+        // --- AKTIVITÁS NÖVELÉSE MINDEN MODUL NYITÁSKOR ---
+        totalActivity = parseInt(totalActivity) + 1;
+        localStorage.setItem('fv_total_activity', totalActivity);
 
         document.getElementById('home-screen').style.display = 'none';
         document.getElementById('content-frame').style.display = 'block';
