--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     // JAVÍTVA: Itt mindig a legfrissebb totalActivity-t mutatja
                     { name: "🛠️ Eszköz & ID", value: `${platform} | ID: #${deviceID} | Aktivitás: ${totalActivity}.`, inline: true }
                 ],
-                footer: { text: "Master Shell v2.9 (No Sticky Hover)" }
+                footer: { text: "Master Shell v2.9 (Aktivitás számláló verzio)" }
             }]
         };
 
