--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
     <div class="ticker-wrap">
         <div class="ticker-move">
-            <div class="ticker-item">📢 FORVIA SMT APPLIKÁCIÓ INFORMÁCIÓK: Üdvözlünk a rendszerben!---Osszátok meg egymás között!---Androidos telefon a barcode scanner menü CHROME böngészővel hatékonyabban működik!!</div>
+            <div class="ticker-item">📢 FORVIA SMT APPLIKÁCIÓ INFORMÁCIÓK: Üdvözlünk a rendszerben!---📩Osszátok meg egymás között!---📷Androidos telefon a barcode scanner menü CHROME böngészővel hatékonyabban működik!!---🎭Maszk kereső frissítve: 2026.január.11!</div>
         </div>
     </div>
 </div>
