--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         </p>
 
         <div class="device-info">
-            Forvia SMT Master Shell v2.9.2
+            Forvia SMT v2.9.2
             <span class="good-luck">Jó munkát!</span>
         </div>
     </div>
