--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         .cal-label { font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1.5px; color: #64748b; font-weight: 700; }
         
         .cal-main-row { display: flex; justify-content: space-between; align-items: center; margin-bottom: 4px; }
-        .cal-date-text { font-size: 1.5rem; font-weight: 800; color: white; letter-spacing: -0.5px; }
+        .cal-date-text { font-size: 1.4rem; font-weight: 800; color: white; letter-spacing: -0.5px; }
         
         .cal-badge { 
             font-size: 0.75rem; padding: 6px 12px; border-radius: 20px; 
@@ -128,7 +128,8 @@
         .instruction-text {
             font-size: 1rem; line-height: 1.6; color: #cbd5e1; margin-bottom: 30px;
         }
-        .instruction-highlight { color: white; font-weight: 700; border-bottom: 2px solid var(--accent); }
+        /* VISSZAÁLLÍTVA AZ EREDETI KÉKRE, ALÁHÚZÁS NÉLKÜL */
+        .instruction-highlight { color: var(--accent); font-weight: 600; }
 
         .device-info {
             font-size: 0.8rem; color: #64748b;
@@ -196,7 +197,7 @@
         }
         .nav-item:active { background: var(--accent) !important; color: white !important; transform: scale(0.98); }
 
-        /* --- JAVÍTOTT MENÜ FAB (NEM KIJELÖLHETŐ + PRO ÁRNYÉK) --- */
+        /* --- JAVÍTOTT MENÜ FAB (EGYSZERŰ KLIKK + TILTOTT KIJELÖLÉS) --- */
         .menu-fab {
             position: fixed; bottom: 30px; right: 30px;
             width: 60px; height: 60px; background: var(--accent);
@@ -205,12 +206,11 @@
             cursor: pointer; z-index: 2147483647; 
             border: 1px solid rgba(255,255,255,0.1);
             transition: transform 0.2s;
-            /* Fontos: letiltja a kijelölést */
             -webkit-user-select: none; 
             -moz-user-select: none;
             -ms-user-select: none;
             user-select: none;
-            -webkit-touch-callout: none; /* iOS menü tiltása */
+            -webkit-touch-callout: none;
             outline: none;
             -webkit-tap-highlight-color: transparent;
         }
@@ -277,7 +277,7 @@
         </p>
 
         <div class="device-info">
-            Forvia SMT v2.9.2
+            Forvia SMT Master Shell v2.9.2
             <span class="good-luck">Jó munkát!</span>
         </div>
     </div>
@@ -319,7 +319,7 @@
     <span>↻</span>
 </div>
 
-<div class="menu-fab" id="menuFab" oncontextmenu="return false;">
+<div class="menu-fab" id="menuFab" onclick="toggleMenu()" oncontextmenu="return false;">
     <span id="menuIcon">☰</span>
 </div>
 
@@ -380,8 +380,10 @@
         const nameDisplay = document.getElementById('cal-name');
         const icon = document.getElementById('cal-type-icon');
 
-        const monthNames = ["Jan", "Feb", "Már", "Ápr", "Máj", "Jún", "Júl", "Aug", "Szep", "Okt", "Nov", "Dec"];
-        const formattedDate = `${monthNames[eventDate.getMonth()]}. ${String(eventDate.getDate()).padStart(2, '0')}.`;
+        // Itt módosítottam: Teljes hónapnevek
+        const monthNames = ["Január", "Február", "Március", "Április", "Május", "Június", "Július", "Augusztus", "Szeptember", "Október", "November", "December"];
+        // Itt módosítottam: Szebb formátum (Március 15.)
+        const formattedDate = `${monthNames[eventDate.getMonth()]} ${eventDate.getDate()}.`;
 
         dateDisplay.innerText = formattedDate;
         nameDisplay.innerText = nextEvent.name;
@@ -525,31 +527,8 @@
         sendDiscordLog("🏠 Kezdőlap", 10070709);
     }
 
-    // --- FAB LOGIKA ---
-    let pressTimer;
-    const fab = document.getElementById('menuFab');
-    const startPress = (e) => {
-        fab.style.transform = "scale(0.8)";
-        pressTimer = setTimeout(() => {
-            if (navigator.vibrate) navigator.vibrate(50);
-            fab.style.transform = "scale(1)";
-            loadModule('9.html', true);
-            fab.dataset.longPressed = "true";
-        }, 800); 
-    };
-    const endPress = (e) => {
-        if (e.type === 'touchend') e.preventDefault();
-        clearTimeout(pressTimer);
-        fab.style.transform = "scale(1)";
-        if (fab.dataset.longPressed !== "true") toggleMenu();
-        setTimeout(() => { fab.dataset.longPressed = "false"; }, 200);
-    };
-
-    fab.addEventListener('mousedown', startPress);
-    fab.addEventListener('touchstart', startPress, {passive: true});
-    fab.addEventListener('mouseup', endPress);
-    fab.addEventListener('touchend', endPress);
-    fab.addEventListener('mouseleave', () => clearTimeout(pressTimer)); 
+    // --- FAB LOGIKA KIVÉVE ---
+    // Egyszerűsítve lett: csak onclick van a HTML-ben
 
     function openSecureLink(caller) {
         if(caller) caller.blur();
