--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                     { name: "⏰ Időpont", value: item.time.toLocaleTimeString('hu-HU'), inline: true },
                     { name: "🛠️ Eszköz & ID", value: `${platform} | ID: #${deviceID} | Aktivitás: ${totalActivity}`, inline: true }
                 ],
-                footer: { text: "Master Shell v2.9.1 (Stability Patch)" }
+                footer: { text: "Master Shell v2.9.1 (Legújabb verzió)" }
             }]
         };
 
