--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             box.classList.add('type-holiday');
             daysBadge.classList.add('holiday');
             label.innerText = "KÖVETKEZŐ ÜNNEP";
-            icon.innerText = "🏖️";
+            icon.innerText = "📅";
         }
 
         if (daysLeft === 0) {
