--- a/1.html
+++ b/1.html
@@ -218,7 +218,7 @@ Promise.all([fetch('bank.csv').then(r=>r.text()),fetch('ultetes.csv').then(r=>r.
     const clearBtn = document.getElementById('clearBtn');
     
     inp.disabled=false;
-    document.getElementById('eredmeny').innerHTML='<div style="text-align:center; padding:30px; color:#475569; font-size:0.9rem;">Adatok betöltve. Várakozás...</div>';
+    document.getElementById('eredmeny').innerHTML='<div style="text-align:center; padding:30px; color:#475569; font-size:0.9rem;">Adatok betöltve</div>';
     renderHistory();
     
     inp.addEventListener('input',function(){
