--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         if(caller) caller.blur();
         
         let pin = prompt("Adatgeneráló - Biztonsági kód:");
-        if (pin === "smtforvia2026") {
+        if (pin === "general") {
             // EREDETI: window.open("...github.io...");
             // ÚJ: Belsőleg töltjük be a 6.html fájlt
             loadModule('6.html'); 
