--- a/6.html
+++ b/6.html
@@ -333,7 +333,7 @@ const MiniZip={table:(function(){let t=[],c;for(let n=0;n<256;n++){c=n;for(let k
         <header>
             <div class="brand-title">ProGen <span>Systems</span> <span style="font-size:10px; color:#555; margin-left:10px;">DEV: GERGŐ ROLAND</span></div>
             <button class="btn-help" onclick="toggleHelp(true)">
-                <span>?</span> Használati Utasítás
+                <span>❓</span> Használati Utasítás
             </button>
         </header>
 
