--- a/1.html
+++ b/1.html
@@ -267,7 +267,7 @@ function keres(k){
     const bT=bank.filter(r=>r[2]&&r[2].toUpperCase().includes(k)).slice(0,30);
     if(bT.length){
         // Kiemelt kék címsor
-        h+=`<div class="section-header header-bank">📦 FEEDER BANK ADATOK</div>`;
+        h+=`<div class="section-header header-bank"> FEEDER BANK ADATOK</div>`;
         bT.forEach(r=>{
             const mc=getModelColor(r[3]);
             h+=`
@@ -295,7 +295,7 @@ function keres(k){
     const uT=ultetes.filter(r=>r[0]&&r[0].toUpperCase().includes(k)).sort((a,b)=>parseInt(b[5])-parseInt(a[5])).slice(0,30);
     if(uT.length){
         // Kiemelt zöld címsor
-        h+=`<div class="section-header header-ultetes">🌱 BEÜLTETÉS ADATOK</div>`;
+        h+=`<div class="section-header header-ultetes"> BEÜLTETÉS ADATOK</div>`;
         uT.forEach(r=>{
             const mc=getModelColor(r[4]); 
             h+=`
